--- a/style.css
+++ b/style.css
@@ -12,13 +12,11 @@ body {
 
 #content {
   display: grid;
-  /* grid-template-columns: 30% 20% 50%; */
-  /* grid-template-columns: 1fr 2fr 1fr; */
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, minmax(150px, auto));
   grid-gap: 10px;
 
-  /* grid-auto-rows: minmax(200px, auto); */
   max-width: 960px;
   margin: 0 auto;
 }
@@ -30,4 +28,34 @@ body {
 
 #content div:nth-child(even) {
   background: #777;
+}
+
+.one {
+  /* grid-column-start: 1;
+  grid-column-end: 3; */
+
+  grid-column: 1 / 3;
+}
+
+.two {
+  grid-column: 3 / 7;
+}
+
+.three {
+  grid-column: 1 / 4;
+  grid-row: 2 / 4;
+}
+
+.four {
+  grid-column: 4 / 7;
+  grid-row: 2 / 4;
+}
+
+.five {
+  grid-column: 3 / 7;
+}
+
+.six {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
