--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
 #content {
   display: grid;
 
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, minmax(150px, auto));
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
 
   max-width: 960px;
@@ -30,32 +29,15 @@ body {
   background: #777;
 }
 
-.one {
-  /* grid-column-start: 1;
-  grid-column-end: 3; */
-
-  grid-column: 1 / 3;
+.nested {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  grid-column: span 3;
 }
 
-.two {
-  grid-column: 3 / 7;
-}
-
-.three {
-  grid-column: 1 / 4;
-  grid-row: 2 / 4;
-}
-
-.four {
-  grid-column: 4 / 7;
-  grid-row: 2 / 4;
-}
-
-.five {
-  grid-column: 3 / 7;
-}
-
-.six {
-  grid-column: 1 / 3;
-  grid-row: 4 / 5;
+.nested p {
+  border: 1px solid white;
+  padding: 20px;
+  margin: 0;
 }
